--- a/package.json
+++ b/package.json
@@ -14,5 +14,12 @@
     "postgresql"
   ],
   "author": "Anthony Lubic",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "cheerio": "^0.22.0",
+    "express": "^4.14.0"
+  },
+  "devDependencies": {
+    "jasmine": "^2.5.2"
+  }
 }
