--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "poe-build-scraper",
   "version": "1.0.0",
   "description": "Scrapes PoE class forums for builds to store into PostgreSQL",
-  "main": "index.js",
+  "main": "app/index.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "node ./app/index.js"
   },
   "private": true,
   "keywords": [
@@ -17,7 +18,8 @@
   "license": "MIT",
   "dependencies": {
     "cheerio": "^0.22.0",
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "x-ray": "^2.3.1"
   },
   "devDependencies": {
     "jasmine": "^2.5.2"
