--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Scrapes PoE class forums for builds to store into PostgreSQL",
   "main": "app/index.js",
   "scripts": {
-    "test": "test",
+    "test": "mocha --reporter spec",
     "start": "node ./app/index.js"
   },
   "private": true,
@@ -19,9 +19,15 @@
   "dependencies": {
     "cheerio": "^0.22.0",
     "express": "^4.14.0",
+    "pg": "^6.1.2",
+    "q": "^1.4.1",
+    "request": "^2.79.0",
     "x-ray": "^2.3.1"
   },
   "devDependencies": {
-    "jasmine": "^2.5.2"
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0",
+    "proxyquire": "^1.7.10",
+    "sinon": "^1.17.6"
   }
 }
