:boom: customise linting rules and adds Prettier

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,15 @@
 {
-  "extends": ["standard", "plugin:jest/recommended"]
+  "extends": ["standard", "plugin:jest/recommended", "plugin:prettier/recommended"],
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": "error",
+    "arrow-parens": [2, "as-needed"],
+    "quotes": [2, "single", { "avoidEscape": true, "allowTemplateLiterals": true }],
+    "no-console": [2, { "allow": ["warn", "error"] }],
+    "no-extra-semi": 2,
+    "semi-spacing": [2, { "before": false, "after": true }],
+    "semi": [2, "always", { "omitLastInOneLineBlock": true }],
+    "object-curly-spacing": [2, "always"],
+    "no-useless-escape": 0
+  }
 }
