--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
   "author": "Anthony Lubic",
   "license": "MIT",
   "dependencies": {
+    "eslint-config-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^3.0.1",
     "express": "4.16.4",
-    "pg": "7.8.0"
+    "pg": "7.8.0",
+    "prettier": "^1.15.3"
   },
   "devDependencies": {
     "eslint": "5.12.0",
