--- a/package.json
+++ b/package.json
@@ -17,20 +17,19 @@
   "author": "Anthony Lubic",
   "license": "MIT",
   "dependencies": {
-    "eslint-config-prettier": "3.4.0",
-    "eslint-plugin-prettier": "3.0.1",
-    "express": "4.16.4",
-    "pg": "7.8.0",
-    "prettier": "1.15.3"
+    "pg": "7.8.0"
   },
   "devDependencies": {
     "eslint": "5.12.0",
+    "eslint-config-prettier": "3.4.0",
     "eslint-config-standard": "12.0.0",
-    "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jest": "22.1.3",
     "eslint-plugin-node": "8.0.1",
+    "eslint-plugin-prettier": "3.0.1",
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-standard": "4.0.0",
-    "jest": "23.6.0"
+    "express-generator": "^4.16.0",
+    "jest": "23.6.0",
+    "prettier": "^1.15.3"
   }
 }
