--- a/package.json
+++ b/package.json
@@ -29,6 +29,6 @@
     "eslint-plugin-promise": "4.0.1",
     "eslint-plugin-standard": "4.0.0",
     "jest": "23.6.0",
-    "prettier": "^1.15.3"
+    "prettier": "1.15.3"
   }
 }
