--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "poe-build-scraper",
-  "version": "1.0.0",
+  "version": "1.13.0",
   "description": "Scrapes PoE class forums for builds to store into PostgreSQL",
   "main": "app/index.js",
   "scripts": {
@@ -23,6 +23,7 @@
     "eslint": "5.12.0",
     "eslint-config-prettier": "3.4.0",
     "eslint-config-standard": "12.0.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jest": "22.1.3",
     "eslint-plugin-node": "8.0.1",
     "eslint-plugin-prettier": "3.0.1",
