--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.7"
+version: '3.7'
 
 services:
   node:
@@ -12,6 +12,7 @@ services:
       - postgres
     environment:
       - PG_CONNECTION_STRING
+    tty: true
 
   postgres:
     container_name: poe_build_scraper_postgres
