--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "author": "Anthony Lubic",
   "license": "MIT",
   "dependencies": {
-    "pg": "7.8.0"
+    "pg": "7.8.0",
+    "xml2json": "0.11.2"
   },
   "devDependencies": {
     "eslint": "5.12.0",
