:construction: To squash or not to squash?

--- a/scraper/docker-compose.yml
+++ b/scraper/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       dockerfile: ./docker/node/Dockerfile
     volumes:
       - .:/home/nodejs/poe-build-scraper
-      - /home/nodejs/poe-build-scraper/node_modules
+      - ./node_modules:/home/nodejs/poe-build-scraper/node_modules
     ports:
       - 9000:9000
     links:
