--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "node": "12.14.0"
   },
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "bookshelf": "^1.0.1",
     "dotenv": "^8.2.0",
     "knex": "^0.20.4",
