:wrench: Tweak a few configuration files
- Add Node v13.5.x support
- Move around the docker volume to be internal as it should be
- Fix the line ending for the VSCode project
- Fix the commit hook, the filepath was wrong when cache directory
didn't exist, it was attempting to create /home/user and fail because
it was already existing. Not using path.dirname fixes it.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "prettier.packageManager": "yarn",
   "prettier.printWidth": 120,
   "prettier.singleQuote": true,
+  "files.eol": "\n",
   "prettier.trailingComma": "es5"
 }
