:whale: Migrate the whole stack under Docker
- Add NodeJS image and setup everything through docker-compose
- Add environment variable for PostgreSql, so we don't rely on
hard-coded values
- Change the initialization script for the DB to be SQL file.
Everything in the docker-entrypoint-initdb.d folder will be autoloaded
if the DB is empty.
- Modify knexfile to use proper env and env variables
- Remove from gitignore the former volumes folder

--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,9 @@
-POSTGRES_DATABASE_URL=postgresql://postgres@localhost:5432/siosa
+# APP
+SERVER_PORT=3000
+
+# DATABASE
+POSTGRES_DB=siosa
+POSTGRES_USER=siosa
+POSTGRES_PASSWORD=siosa
+POSTGRES_HOST=postgresql
+POSTGRES_PORT=5432
