--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint-fix": "npx eslint . --fix --ext .js,.jsx,.ts,.tsx",
     "knex": "$(yarn bin)/knex --knexfile ./server/database/knexfile.js"
   },
   "husky": {
@@ -27,6 +29,14 @@
   "devDependencies": {
     "@types/node": "^12.12.18",
     "@types/react": "^16.9.16",
+    "@typescript-eslint/eslint-plugin": "^2.13.0",
+    "@typescript-eslint/parser": "^2.13.0",
+    "eslint": "^6.1.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "gitmoji-cli": "^3.0.1",
     "husky": "^3.1.0",
     "typescript": "^3.7.3"
