--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,6 @@ on:
   push:
     branches:
       - master
-  pull_request:
-    # Sequence of patterns matched against refs/heads
-    branches:
       - mnt/** # Push events to branches matching refs/heads/mnt/43
       - bugfix/** # Push events to branches matching refs/heads/bugfix/13
       - feature/** # Push events to branches matching refs/heads/feature/10
@@ -30,6 +27,6 @@ jobs:
         run: |
           yarn install
           yarn run build
-      # - name: ES Lint
-      #   run: |
-      #     yarn lint
+      - name: ES Lint
+        run: |
+          yarn lint
