--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
   "prettier.printWidth": 120,
   "prettier.singleQuote": true,
   "files.eol": "\n",
-  "prettier.trailingComma": "es5"
+  "prettier.trailingComma": "es5",
+  "prettier.arrowParens": "always"
 }
