--- a/package.json
+++ b/package.json
@@ -1,4 +1,22 @@
 {
+  "name": "siosa",
+  "version": "0.0.1",
+  "description": "Path Of Exile build library",
+  "bugs": "https://github.com/sanghin/siosa/issues",
+  "repository": "github:sanghin/siosa",
+  "license": "MIT",
+  "keywords": [
+    "path of exile",
+    "poe",
+    "search",
+    "tool",
+    "library",
+    "build"
+  ],
+  "author": "Sanghin",
+  "contributors": [
+    "Luc Tribolet <luc.tribolet@gmail.com> (https://tribolet.fr)"
+  ],
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -13,7 +31,8 @@
     }
   },
   "engines": {
-    "node": "^13.5.0"
+    "node": "^13.5.0",
+    "yarn": "^1.21.0"
   },
   "dependencies": {
     "bookshelf": "^1.0.1",
