:whale: cache package.json and yarn install
Speed up rebuilding process

--- a/docker/node/Dockerfile
+++ b/docker/node/Dockerfile
@@ -11,9 +11,12 @@ RUN apk add --no-cache --virtual .gyp \
 
 WORKDIR /app
 
-COPY . .
+COPY package*.json ./
+COPY yarn.lock ./
 
 RUN yarn install
+
+COPY . .
 
 EXPOSE ${PORT}
 
