--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "gitmoji-cli": "^3.0.1",
     "husky": "^3.1.0",
+    "jest": "^24.9.0",
     "typescript": "^3.7.3"
   }
 }
