--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "start": "next start",
     "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
     "lint-fix": "npx eslint . --fix --ext .js,.jsx,.ts,.tsx",
+    "test": "NODE_ENV=testing jest",
+    "test-coverage": "NODE_ENV=testing jest --coverage --coverageDirectory=output/coverage/jest",
     "knex": "$(yarn bin)/knex --knexfile ./server/database/knexfile.ts"
   },
   "husky": {
@@ -47,10 +49,17 @@
     "xml2json": "^0.11.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "@babel/preset-typescript": "^7.8.0",
+    "@types/jest": "^24.0.25",
     "@types/node": "^12.12.18",
     "@types/react": "^16.9.16",
     "@typescript-eslint/eslint-plugin": "^2.13.0",
     "@typescript-eslint/parser": "^2.13.0",
+    "babel-jest": "^24.9.0",
+    "babel-plugin-dynamic-import-node": "^2.3.0",
+    "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.18.2",
@@ -60,6 +69,9 @@
     "gitmoji-cli": "^3.0.1",
     "husky": "^3.1.0",
     "jest": "^24.9.0",
-    "typescript": "^3.7.3"
+    "object.fromentries": "^2.0.2",
+    "ts-jest": "^24.3.0",
+    "ts-node": "^8.6.1",
+    "typescript": "^3.7.4"
   }
 }
