--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,9 +6,7 @@
   "recommendations": [
     "esbenp.prettier-vscode",
     "eriklynd.json-tools",
-    "ionutvmi.path-autocomplete",
-    "vscode.typescript-language-features",
-    "vscode.typescript"
+    "ionutvmi.path-autocomplete"
   ],
   // List of extensions recommended by VS Code that should not be recommended for users of this workspace.
   "unwantedRecommendations": []
