:fire: Server: removes typescript configuration
This is not working for knex commands, we tried everything

https://github.com/TypeStrong/ts-node
https://gist.github.com/tukkajukka/9893e5f111862d06044b73fa944a8741

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "lint-fix": "npx eslint . --fix --ext .js,.jsx,.ts,.tsx",
     "test": "NODE_ENV=testing jest",
     "test-coverage": "NODE_ENV=testing jest --coverage --coverageDirectory=output/coverage/jest",
-    "knex": "$(yarn bin)/knex --knexfile ./server/database/knexfile.ts"
+    "knex": "$(yarn bin)/knex --knexfile ./server/database/knexfile.js"
   },
   "husky": {
     "hooks": {
