:wrench: fix wrong import of eslint-jest plugin

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
     "es6": true,
     "node": true
   },
-  "extends": ["plugin:jest", "plugin:react/recommended", "airbnb"],
+  "extends": ["plugin:jest/recommended", "plugin:react/recommended", "airbnb"],
   "globals": {
     "Atomics": "readonly",
     "SharedArrayBuffer": "readonly"
