--- a/package.json
+++ b/package.json
@@ -21,44 +21,35 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "lint": "npx eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint-fix": "npx eslint . --fix --ext .js,.jsx,.ts,.tsx",
-    "knex": "$(yarn bin)/knex --knexfile ./server/database/knexfile.ts"
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "scripts/commitmsg $HUSKY_GIT_PARAMS"
-    }
-  },
-  "engines": {
-    "node": "^13.5.0",
-    "yarn": "^1.21.0"
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --fix --ext .ts,.tsx"
   },
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
-    "bookshelf": "^1.0.1",
-    "dotenv": "^8.2.0",
-    "knex": "^0.20.4",
-    "next": "^9.4.4",
-    "node-fetch": "^2.6.1",
-    "pg": "^8.2.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "dotenv": "^10.0.0",
+    "knex": "^0.95.12",
+    "next": "^12.0.1",
+    "node-fetch": "^3.0.0",
+    "pg": "^8.7.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "xml2json": "^0.12.0"
   },
   "devDependencies": {
-    "@types/node": "^14.0.13",
-    "@types/react": "^16.9.38",
-    "@typescript-eslint/eslint-plugin": "^3.4.0",
-    "@typescript-eslint/parser": "^3.4.0",
-    "eslint": "^7.3.1",
-    "eslint-config-airbnb": "^18.2.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jsx-a11y": "^6.3.1",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
-    "gitmoji-cli": "^3.2.6",
-    "husky": "^4.2.5",
-    "typescript": "^3.9.5"
+    "@types/node": "^16.11.6",
+    "@types/react": "^17.0.33",
+    "@typescript-eslint/eslint-plugin": "^5.2.0",
+    "@typescript-eslint/parser": "^5.2.0",
+    "eslint": "^8.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-import-resolver-typescript": "^2.5.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "gitmoji-cli": "^4.7.0",
+    "husky": "^7.0.4",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4"
   }
 }
