:boom: restructure project

--- a/.env.local
+++ b/.env.local
@@ -1,9 +1,5 @@
-# APP
-SERVER_PORT=3000
-
-# DATABASE
 POSTGRES_DB=siosa
 POSTGRES_USER=siosa
 POSTGRES_PASSWORD=siosa
-POSTGRES_HOST=postgresql
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
