--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,9 +2,9 @@ on:
   push:
     branches:
       - master
-      - mnt/** # Push events to branches matching refs/heads/mnt/43
-      - bugfix/** # Push events to branches matching refs/heads/bugfix/13
-      - feature/** # Push events to branches matching refs/heads/feature/10
+      - mnt/**
+      - bugfix/**
+      - feature/**
 name: Build, lint and test
 jobs:
   job_build_test:
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [13.x]
+        node-version: [16.x]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v2
