--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "xml2json": "^0.12.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^15.0.0",
+    "@commitlint/config-conventional": "^15.0.0",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
