--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "lint:fix": "eslint . --fix --ext .ts,.tsx"
   },
   "dependencies": {
+    "@types/node": "^17.0.2",
+    "@types/react": "^17.0.37",
+    "@types/xml2json": "^0.11.4",
     "dotenv": "^10.0.0",
     "knex": "^0.95.12",
     "next": "^12.0.7",
@@ -35,13 +38,12 @@
     "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "typescript": "^4.5.4",
     "xml2json": "^0.12.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
-    "@types/node": "^16.11.6",
-    "@types/react": "^17.0.33",
     "@typescript-eslint/eslint-plugin": "^5.2.0",
     "@typescript-eslint/parser": "^5.2.0",
     "eslint": "^8.1.0",
@@ -51,9 +53,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.26.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gitmoji-cli": "^4.7.0",
     "husky": "^7.0.4",
-    "prettier": "^2.4.1",
-    "typescript": "^4.4.4"
+    "prettier": "^2.4.1"
   }
 }
