--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "knex": "^0.95.12",
     "next": "^12.0.7",
     "node-fetch": "^3.0.0",
+    "objection": "^3.0.0",
+    "objection-guid": "^3.0.2",
     "pg": "^8.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
